--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -5,9 +5,9 @@
 <h4>Appointments:</h4>
 <table>
   <tr>
-    <th>Date</th>
-    <th>Time</th>
-    <th>Patient</th>
+    <th style="width: 30px">Date</th>
+    <th style="width: 30px">Time</th>
+    <th style="width: 30px">Patient</th>
   </tr>
   <% @doctor.appointments.each do |app| %>
     <td><%= app.appointment_datetime.strftime("%B %d, %Y") %></td>
