--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -5,9 +5,9 @@
 <h4>Appointments:</h4>
 <table>
   <tr>
-    <th style="width: 15%">Date</th>
-    <th style="width: 15%">Time</th>
-    <th style="width: 15%">Patient</th>
+    <th style="width: 120px">Date</th>
+    <th style="width: 120px">Time</th>
+    <th style="width: 120px">Patient</th>
   </tr>
   <% @doctor.appointments.each do |app| %>
     <tr>
