--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -5,14 +5,12 @@
 <h4>Appointments:</h4>
 <table>
   <tr>
-    <th style="width: 120px">Date</th>
-    <th style="width: 120px">Time</th>
+    <th style="width: 120px">Date and Time</th>
     <th style="width: 120px">Patient</th>
   </tr>
   <% @doctor.appointments.each do |app| %>
     <tr>
-      <td><%= app.appointment_datetime.strftime("%B %d, %Y") %></td>
-      <td>at <%=  app.appointment_datetime.strftime("%H:%M") %></td>
+      <td><%= app.appointment_datetime.strftime("%B %d, %Y") %> at <%=  app.appointment_datetime.strftime("%H:%M") %></td>
       <td><%= app.patient.name %></td>
     </tr>
   <% end %>
