--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -11,7 +11,7 @@
   <% @doctor.appointments.each do |app| %>
     <tr>
       <td><%= app.appointment_datetime.strftime("%B %d, %Y") %> at <%=  app.appointment_datetime.strftime("%H:%M") %></td>
-      <td><%= app.patient.name %></td>
+      <td><%= link_to app.patient.name, patient_path(app.patient) %></td>
     </tr>
   <% end %>
 </table>
