automatically backed up by learn

--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,8 +2,8 @@
 
 <table>
   <tr>
-    <th>Name: </th>
-    <th>Number of Appointments:</th>
+    <th style="text-align: left;">Name: </th>
+    <th style="text-align: left;">Number of Appointments:</th>
   </tr>
     <% @patients.each do |patient| %>
       <tr>
