--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,14 +1,8 @@
 <h2>Patients</h2>
 
-<table>
-  <tr>
-    <th style="text-align: left;">Name: </th>
-    <th style="text-align: left;">Number of Appointments:</th>
-  </tr>
-    <% @patients.each do |patient| %>
-      <tr>
-        <td><%= patient.name %></td>
-        <td><%= patient.appointments.count %></td>
-      </tr>
-    <% end %>
-</table>
+<ul>
+  <% @patients.each do |patient| %>
+    <li><%= patient.name %> </li>
+    <li><%= patient.appointments.count %> </li>
+  <% end %>
+</ul>
