--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @patients.each do |patient| %>
-    <li>Name: <%= patient.name %></li>
-    <li>Number of Appointments: <%= patient.appointments.count %></li>
+    Name: <%= patient.name %>
+    Number of Appointments: <%= patient.appointments.count %>
   <% end %>
 </ul>
