--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @patients.each do |patient| %>
-    Name: <%= patient.name %>
-    Number of Appointments: <%= patient.appointments.count %>
+    <li>Name: <%= patient.name %>
+    Number of Appointments: <%= patient.appointments.count %></li>
   <% end %>
 </ul>
