automatically backed up by learn

--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @patient.name %></h2>
 
-<h3><%= @patient.department %></h3>
+<h3><%= @patient.age %></h3>
 
 <h4>Appointments:</h4>
 <table>
