--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,1 +1,5 @@
 <h2><%= @appt.appointment_datetime.strftime("%B %d, %Y") %> at <%= @appt.appointment_datetime.strftime("%H:%M") %></h2>
+
+<% @appt.each do |appt| %>
+  <%= link_to appt.doctor.name, doctor_path(appt.doctor) %>
+<% end %>
