--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,2 +1,4 @@
-<h1>Appointments#show</h1>
-<p>Find me in app/views/appointments/show.html.erb</p>
+<h2><%= @appt.appointment_datetime.strftime("%B %d, %Y") %> at <%= @appt.appointment_datetime.strftime("%H:%M") %></h2>
+
+<%= link_to @appt.doctor.name, doctor_path(@appt.doctor) %><br>
+<%= link_to @appt.patient.name, patient_path(@appt.patient) %><Br>
