--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Patients#index</h1>
-<p>Find me in app/views/patients/index.html.erb</p>
+<h2>Patients</h2>
+
+<ul>
+  <% @patients.each do |patient| %>
+    <li>Name: <%= patient.name %>
+    Number of Appointments: <%= patient.appointments.count %></li>
+  <% end %>
+</ul>
