--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -1,2 +1,17 @@
-<h1>Patients#show</h1>
-<p>Find me in app/views/patients/show.html.erb</p>
+<h2><%= @patient.name %></h2>
+
+<h3><%= @patient.age %></h3>
+
+<h4>Appointments:</h4>
+<table>
+  <tr>
+    <th style="width: 180px">Date and Time</th>
+    <th style="width: 180px">Patient</th>
+  </tr>
+  <% @patient.appointments.each do |app| %>
+    <tr>
+      <td><%= app.appointment_datetime.strftime("%B %d, %Y") %> at <%=  app.appointment_datetime.strftime("%H:%M") %></td>
+      <td><%= link_to app.doctor.name, doctor_path(app.doctor) %></td>
+    </tr>
+  <% end %>
+</table>
